<resources>
    <string name="app_name">Stopwatch2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, StopwatchActivity!</string>
    <string name="timer">00:00:00</string>
    <string name="timerMs">.0</string>
    <string name="startText">start</string>
    <string name="resetText">reset</string>
    <string name="stopText">stop</string>
    <string name="backgroundText">Stopwatch</string>
    <string name="adsText">Ads Go Here</string>
</resources>
