<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentFrameLayout">
        <ImageView
            android:src="#3f51b5"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/backgroundImageView">
        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout">
            <LinearLayout
                android:background="@drawable/timerbackground"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/timerBackground">
                <TextView
                    style="@style/timerText"
                    android:text="@string/timer"
                    android:id="@+id/timer">
                </TextView>
                <TextView style="@style/timerText"
                    android:text="@string/timerMs"
                    android:id="@+id/timerMs"
                    android:textSize="30sp"
                    android:paddingTop="30sp">
                </TextView>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                >



                <Button
                    style="@style/buttonText"
                    android:background="@drawable/stopbuttonstates"
                    android:textColor="#FFFFFF"
                    android:text="@string/stopText"
                    android:id="@+id/stopButton"
                    android:visibility="gone"
                    android:onClick="stopClick"
                    android:height="100dp"
                    android:layout_margin="5dp"/>

                <Button
                    style="@style/buttonText"
                    android:background="@drawable/startbuttonstates"
                    android:textColor="#FFFFFF"
                    android:text="@string/startText"
                    android:id="@+id/startButton"
                    android:onClick="startClick"
                    android:height="100dp"
                    android:layout_margin="5dp">
                </Button>

                <Button
                    style="@style/buttonText"
                    android:background="@drawable/uploadbuttonstates"
                    android:textColor="#FFFFFF"
                    android:text="@string/uploadText"
                    android:id="@+id/uploadButton"
                    android:onClick="uploadClick"
                    android:height="100dp"
                    android:layout_margin="5dp"
                    android:visibility="gone">
                </Button>

                <Button
                    style="@style/buttonText"
                    android:background="@drawable/resetbuttonstates"
                    android:textColor="#FFFFFF"
                    android:text="@string/resetText"
                    android:id="@+id/resetButton"
                    android:onClick="resetClick"
                    android:height="100dp"
                    android:layout_margin="5dp">
                </Button>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>